# ai3-fullstack

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LAB2_DECISIONS.md  README.md  pyproject.toml  requirements.txt  student_config.yaml
.streamlit/: config.toml  secrets.toml.example
app/: branding.py  feedback.py  main.py  rag.py
chroma_db/: chroma.sqlite3
data/: attack_gallery.json
data/northbrook/: board_meeting_q3_2024.md  board_meeting_q4_2024.md  employee_handbook.md  engineering_standup_2025_01.md  expense_policy.md  financial_report_q3_2024.md  financial_report_q4_2024.md  hr_committee_2025_01.md  memo_ceo_annual_kickoff.md  memo_incomplete.md  memo_malformed.md  memo_office_relocation.md  memo_policy_correction.md  memo_security_update.md  remote_work_policy.md  support_tickets.json  vacation_policy_2023.md  vacation_policy_2025.md
notebooks/: embedding_space_viz.ipynb
notebooks/1_1/: session_1_1.ipynb  test_queries.json
notebooks/1_2/: session_1_2.ipynb
notebooks/2_1/: demo_chat.py  demo_execution.py  demo_state.py  session_2_1.ipynb
notebooks/2_2/: session_2_2.ipynb
notebooks/3_1/: changes-overview.md  session_3_1.ipynb
notebooks/3_2/: session_3_2.ipynb
notebooks/4_1/: session_4_1.ipynb
notebooks/_cache/: pca_viz_cache.pkl
notebooks/scripts/: build_embedding_cache.py
pipeline/context/: assembler.py  manager.py
scripts/: check.py  check_pipeline.py  push_adversarial_set.py  push_golden_set.py  run.cmd  run.ps1  run.sh  run_experiment.py  setup.sh  validate_deploy.py
tests/: test_safety.py
(+28 files in other folders)
